--- a/pluginXml/resources/META-INF/plugin.xml
+++ b/pluginXml/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
         Support for Play Framework, Akka and Scala.js is enabled in IntelliJ IDEA Ultimate.
       ]]>
     </description>
+    <change-notes>CHANGE_NOTES</change-notes>
     <version>VERSION</version>
     <vendor url="https://www.jetbrains.com">JetBrains</vendor>
     <idea-version since-build="221.872" until-build="221.*"/>
