Remove unused declarations in files M*

--- a/scala/scala-impl/resources/messages/ScalaMetaBundle.properties
+++ b/scala/scala-impl/resources/messages/ScalaMetaBundle.properties
@@ -4,6 +4,7 @@ tree.conversion.error=Tree conversion error: {0}
 semantic.error=Semantic error: {0}
 stack.overflow.during.expansion=Stack overflow during expansion {0}
 internal.error.getmessage=Internal error: {0}
+failed.to.parse.result=Failed to parse result: {0}
 
 ### scala/meta/intellij/QuasiquoteInferUtil.scala
 failed.to.get.qq.ref.in.pattern=Failed to get QQ ref in {0}
